--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
   </head>
   <body>
     <div id="root">
     </div>
     <script src="./bundle.js"></script>
   </body>
+  <script>
+    ReservationsModule.default.ReactDOM.render(
+      ReservationsModule.default.React.createElement(ReservationsModule.default.ReservationsModule),
+      document.getElementById('root')
+    );
+  </script>
 </html>
